feat:spring core翻译至3

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -5671,6 +5671,283 @@ Spring包括下列Resource实现
 
 ### 2.3.1. UrlResource
 
+UrlResource包装java.net.URL，可用于访问通常通过URL访问的任何对象，例如文件，HTTP目标，FTP目标等。所有URL均具有标准化的字符串表示形式，这种适当的标准化前缀用来指示另一种URL类型，包括`file:`用于访问文件系统路径，`http:`用于通过HTTP协议访问资源，`ftp:`用于通过FTP访问资源等。
+
+UrlResource是由Java代码通过明确使用UrlResource构造函数创建的，但是当您传递表示路径的String参数调用API方法时，通常会隐式地创建。对于后一种情况，JavaBeans PropertyEditor最终决定要创建哪种类型的Resource。如果路径字符串包含众所周知的前缀（例如`classpath:`)，则为该前缀创建适当的专用Resource。但是如果它无法识别前缀，它将假定字符串是标准URL字符串并创建UrlResource。
+
+### 2.3.2. `ClassPathResource`
+
+该类代表应从类路径获得的资源。它使用线程上下文类加载器，给定的类加载器或给定的类来加载资源。
+
+此Resource实现作为java.io.File支持文件系统中的路径资源，但是不支持在jar包中的类路径资源和尚未暴露到文件系统中的资源（取决于servlet引擎或者环境）。为了解决这个问题，各种Resource实现始终支持java.net.URL。
+
+ClassPathResource是由Java代码通过明确使用ClassPathResource构造函数来创建的，但是当您传递表示路径的String参数调用API方法时，通常会隐式地创建。对于后一种情况，JavaBeans PropertyEditor识别路径字符串上特殊的前缀`classpath:`并在这种情况下创建ClassPathResource。
+
+### 2.3.3. `FileSystemResource`
+
+这是java.io.File和java.nio.file.Path的Resource实现。它支持File和URL的解决方案。
+
+### 2.3.4. `ServletContextResource`
+
+这是ServletContext资源的Resource实现，可解析相关Web应用程序根目录中的相对路径。它始终支持流访问和URL访问，但仅在Web应用程序存档目录在文件系统上扩展时，才允许java.io.File访问。无论是否在文件系统上进行扩展，还是直接从JAR或其他地方访问，例如数据库（可能）实际上取决于Servlet容器。
+
+### 2.3.5. `InputStreamResource`
+
+InputStreamResource是给定InputStream的Resource实现。仅当没有合适的特定资源实现时，才应使用它。在可能的情况下，更建议使用ByteArrayResource或任何基于文件的Resource实现。
+
+与其他Resource实现相反，这是已经打开的资源的描述符。因此，isOpen()返回true。如果您需要将资源描述符保留在某个地方或需要多次阅读流，请勿使用它。
+
+### 2.3.6. `ByteArrayResource`
+
+这是给定字节数组的Resource实现。它为给定的字节数组创建一个ByteArrayInputStream。它对于从任何给定的字节数组中加载内容很有用，而无需InputStreamResource。
+
+## 2.4. ResourceLoader
+
+ResourceLoader接口旨在返回Resource实例。以下列表显示了ResourceLoader接口定义：
+
+```java
+public interface ResourceLoader {
+
+    Resource getResource(String location);
+}
+```
+
+所有应用程序上下文实现了ResourceLoader接口。因此，所有应用程序上下文均可用于获得Resource实例。
+
+当您在特定的应用程序上下文上调用getResource()，并且指定的位置路径没有特定的前缀时，您将获得适合该特定应用程序上下文的Resource类型。例如，假设以下代码段是针对ClassPathXmlApplicationContext实例运行的：
+
+```java
+Resource template = ctx.getResource("some/resource/path/myTemplate.txt");
+```
+
+对于ClassPathXmlApplicationContext，该代码返回ClassPathResource。如果相同的方法在FileSystemXmlApplicationContext实例上调用，则它将返回FileSystemResource。对于WebApplicationContext，它将返回ServletContextResource。它类似地返回每个上下文适当的对象。您可以以适合特定应用程序上下文的方式加载资源。
+
+另一方面，您也可以通过指定特殊`classpath:`前缀强制返回ClassPathResource，如下示例显示：
+
+```java
+Resource template = ctx.getResource("classpath:some/resource/path/myTemplate.txt");
+```
+
+同样，您可以通过指定任何标准的java.net.URL前缀来强制使用UrlResource。以下示例使用file和http前缀：
+
+```java
+Resource template = ctx.getResource("file:///some/resource/path/myTemplate.txt");
+Resource template = ctx.getResource("https://myhost.com/resource/path/myTemplate.txt");
+```
+
+下表总结了将String对象转换为Resource对象的策略：
+
+| 前缀        | 示例                                               | 说明                                                         |
+| ----------- | -------------------------------------------------- | ------------------------------------------------------------ |
+| classpath： | classpath:com/myapp/config.xml                     | 从类路径中加载                                               |
+| file：      | [file:///data/config.xml](file:///data/config.xml) | 从文件系统中加载URL。参考[`FileSystemResource`注意事项](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#resources-filesystemresource-caveats). |
+| http：      | https://myserver/logo.png                          | 作为URL加载                                                  |
+| 无前缀      | /data/config.xml                                   | 依赖底层ApplicationContext                                   |
+
+## 2.5. ResourceLoaderAware接口
+
+ResourceLoaderAware接口是一个特殊的回调接口，它标识了希望提供ResourceLoader引用的组件。以下代码展示了ResourceLoaderAware接口定义：
+
+```java
+public interface ResourceLoaderAware {
+
+    void setResourceLoader(ResourceLoader resourceLoader);
+}
+```
+
+当实现ResourceLoaderAware的类部署到应用程序上下文（作为Spring管理的bean）中时，它被应用程序上下文识别为ResourceLoaderAware。然后，应用程序上下文调用setResourceLoader(ResourceLoader)，将自己作为参数提供（请记住，Spring中的所有应用程序上下文实现了Resoursceloader接口）。
+
+由于ApplicationContext是ResourceLoader，因此这种bean还可以实现ApplicationContextAware接口，并直接使用所提供的应用程序上下文来加载资源。但是如果您需要的话，最好使用专门的ResourceLoader接口。该代码仅与资源加载接口（可以视为实用工具接口），而不会耦合到整个Spring ApplicationContext接口。
+
+在应用程序组件中，您也可以依靠自动注入ResourceLoader作为实现ResourceLoaderAware接口的替代方案。“传统的”constructor和byType自动注入模式（如[自动注入协作者](#1.4.5. 自动装配协作者)）能够分别为构造函数参数或setter方法参数提供ResourceLoader。要获得更大的灵活性（包括字段注入和多参数方法注入的能力），请考虑使用基于注解的注入功能。在这种情况下，Resoursceloader被自动注入@Autowired标注的个字段，构造函数参数或方法参数中。
+
+## 2.6. Resources作为依赖
+
+如果bean本身要通过某种动态过程来确定并提供资源路径，那么bean使用ResourceLoader接口加载资源可能是有意义的。例如，考虑某种模板的加载，其中所需的特定资源取决于用户的角色。如果资源是静态的，则完全消除ResourceLoader接口的使用是有意义的，让bean暴露所需的Resource属性，并期望将它们注入其中。
+
+所有应用程序上下文都注册并使用特殊的JavaBeans PropertyEditor，它可以将String路径转换为Resource对象。因此，如果myBean具有Resource类型的模板属性，则可以为该资源配置一个简单的字符串，如以下示例所示：
+
+```xml
+<bean id="myBean" class="...">
+    <property name="template" value="some/resource/path/myTemplate.txt"/>
+</bean>
+```
+
+请注意，资源路径没有前缀。因此，由于应用程序上下文本身将用作ResourceLoader，资源本身是通过ClassPathResource，FileSystemResource或ServletContextResource加载的，具体取决于上下文的类型。
+
+如果您需要强制使用特定的Resource类型，则可以使用前缀。以下两个示例显示了如何强制ClassPathResource和UrlResource（后者用于访问文件系统文件）：
+
+```xml
+<property name="template" value="classpath:some/resource/path/myTemplate.txt">
+<property name="template" value="file:///some/resource/path/myTemplate.txt"/>
+```
+
+## 2.7. 应用程序上下文和资源路径
+
+本节涵盖了如何使用资源创建应用程序上下文，包括使用XML的快捷方式，如何使用通配符以及其他详细信息。
+
+### 2.7.1. 构造应用程序上下文
+
+应用程序上下文构造函数（对于特定的应用程序上下文类型）通常将字符串或字符串数组作为资源的位置路径，例如构成上下文定义的XML文件。
+
+当这样的位置路径没有前缀时，特定Resource类型从该路径构建并用于加载bean定义，并且适用于特定的应用程序上下文。例如以下示例，该示例创建ClassPathXmlApplicationContext：
+
+```java
+ApplicationContext ctx = new ClassPathXmlApplicationContext("conf/appContext.xml");
+```
+
+bean定义是从类路径加载的，因为使用了ClassPathResource。但是，请考虑以下示例，该示例创建FileSystemXmlApplicationContext：
+
+```java
+ApplicationContext ctx =
+    new FileSystemXmlApplicationContext("conf/appContext.xml");
+```
+
+现在，bean定义是从文件系统位置加载的（在这种情况下，相对于当前的工作目录）。
+
+请注意，在位置路径上使用特殊类路径前缀或标准URL前缀会覆盖默认加载的Resource。考虑以下示例：
+
+```java
+ApplicationContext ctx =
+    new FileSystemXmlApplicationContext("classpath:conf/appContext.xml");
+```
+
+使用FileSystemXmlApplicationContext加载类路径的bean定义。然而，它还是FileSystemXmlApplicationContext。如果随后用作ResourceLoader，则任何无前缀的路径仍被视为文件系统路径。
+
+**构造`ClassPathXmlApplicationContext` 实例--快捷方式**
+
+ClassPathXmlApplicationContext暴露了大量构造器以便实例化。您可以提供仅包含XML文件本身文件名（没有父路径信息）的字符串数组，还可以提供类。然后，ClassPathXmlApplicationContext从提供的类得到路径信息。考虑以下目录结构：
+
+```yaml
+com/
+  foo/
+    services.xml
+    daos.xml
+    MessengerService.class
+```
+
+下面的示例显示了如何实例化由名为services.xml和daos.xml（类路径上）的bean定义组成的ClassPathXmlApplicationContext实例。
+
+```java
+ApplicationContext ctx = new ClassPathXmlApplicationContext(
+    new String[] {"services.xml", "daos.xml"}, MessengerService.class);
+```
+
+有关各种构造函数的详细信息，请参见[`ClassPathXmlApplicationContext`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/support/ClassPathXmlApplicationContext.html) Javadoc。
+
+### 2.7.2. 应用程序上下文中的通配符构造器资源路径
+
+应用程序上下文中的资源路径构造函数值可能是简单的路径（如前所述），每个路径都有到目标资源一对一的映射，或者可能包含特殊的“ classpath*：”前缀或内部Ant风格正则表达式（通过使用Spring的PathMatcher工具匹配）。
+
+这种机制的一种用途是您需要打包组件式应用程序。所有组件都可以将上下文定义片段“发布”到众所周知的位置路径，并且当使用`classpath*:`前缀创建最终的应用程序上下文时，所有组件片段都会自动拾取。
+
+请注意，这种通配符是特定于在应用程序上下文构造函数中使用资源路径（或直接使用PathMatcher工具类）并在构造时解析的。它与Resource类型本身无关。您不能使用`classpath*：`前缀来构建实际Resource，因为资源一次指向一个资源。
+
+**Ant风格模式句型
+
+路径位置可以包含Ant风格的句型，如以下示例所示
+
+```xml
+/WEB-INF/*-context.xml
+com/mycompany/**/applicationContext.xml
+file:C:/some/path/*-context.xml
+classpath:com/mycompany/**/applicationContext.xml
+```
+
+当路径位置包含Ant风格的句型时，解析器有一个更复杂的步骤来试图解析通配符。它为通往最后一个非通配符的路径生产资源，并从中获得一个URL。如果此URL不是`jar:`URL或容器特定的变体（例如WebLogic中的`zip：`，WebSphere中的`wsjar`等），则从ava.io.File获得它，并用于遍历文件系统来解析该通配符。对于jar URL，解析器要么从中获取java.net.JarURLConnection，要么手动解析jar URL，然后遍历jar文件的内容以解析通配符。
+
+**可移植性**
+
+如果指定的路径已经是文件URL（因为基本资源ResourceLoader显示地或隐式地是一个文件系统），则能保证通配符以完全可移植式的方式工作。如果指定的路径是类路径位置，则解析器必须通过调用Classloader.getResource()调用来获得最后的非通配符URL路径段。由于这只是路径的一个节点（不是末尾的文件），无论返回哪种URL，它实际上是未定义的（在ClassLoader Javadoc中）。实际上，它始终是代表目录（类路径资源解析到文件系统位置）或某种类型的jar URL（类路径资源解析到jar位置）的java.io.File。尽管如此，此操作仍然存在移植性问题。
+
+如果在最后一个非通配符段获得了jar URL，则解析器必须能够从中获得java.net.JarURLConnection，或者手动解析jar URL，以便能够获得jar的内容并解析通配符。这确实在大多数环境中都起作用，但在其他环境中会失败，我们强烈建议在使用jar包的资源通配符解析之前先进行全面的测试。
+
+**`classpath:`前缀**
+
+在构建基于XML的应用程序上下文时，位置字符串可以使用`classpath*:`前缀：如下示例显示：
+
+```java
+ApplicationContext ctx =
+    new ClassPathXmlApplicationContext("classpath*:conf/appContext.xml");
+```
+
+这个特殊的前缀指定必须获得匹配给定名称的所有classpath 资源（这实质上是通过呼叫ClassLoader.getResources(…)进行的），然后合并以形成最终的应用程序上下文定义。
+
+> :information_source:通配符classpath依赖于基础classloader的getResources()方法。如今，大多数应用程序服务器都提供自己的classloader ，因此行为可能有所不同，尤其是在处理JAR文件时。一个简单的测试来检查`classpath*`是否工作是使用classloader从classpath上的jar中加载文件：`getClass().getClassLoader().getResources("<someFileInsideTheJar>")`。尝试使用具有相同名称但位置不同的两个文件执行此测试。如果返回不合适的结果，请查看应用程序服务器文档以检查是否存在可能影响classloader 行为的设置。
+
+您还可以将`classpath*:`前缀与位置路径的其余部分中的PathMatcher句型组合在一起（例如，classpath\*:META-INF/\*-beans.xml）。在这种情况下，解析策略非常简单：ClassLoader.getResources()在最后一个非通配符路径段中使用，以获取类加载程序层次结构中的所有匹配资源，然后在每个资源中，相同的PathMatcher解析子路径上的通配符。
+
+**通配符相关的备注**
+
+请注意，当与Ant风格的模式结合使用时，只有在模式启动之前至少有一个根目录可用，除非实际目标文件位于文件系统中。这意味着诸如`classpath*:*.xml`之类的句型可能不会从jar文件的根部检索文件，而仅从暴露的目录的根部中检索文件。
+
+Spring检索classpath条目的能力源自JDK的ClassLoader.getResources()方法，该方法仅返回一个空字符串的文件系统位置（指示可能的根以搜索）。Spring评估URLClassLoader运行时配置和jar文件中java.class.path manifests，但不能保证会导致移植性行为。
+
+> :information_source:扫描classpath包需要在类路径中存在相应的目录条目。当您用Ant构建JARs 时，请勿激活JAR 任务的files-only开关。此外，基于某些环境中的安全策略类路，径目录可能不会暴露--例如，JDK 1.7.0_45及以上的独立应用（这需要在您的manifests中设置“Trusted-Library”。）参考 https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources。
+>
+> 在JDK 9的模块路径（Jigsaw）上，Spring的类路径扫描通常可以按预期工作。在这里也强烈推荐将资源放入专用目录中，从而避免在跟目录上搜索jar文件产生上述的可移植性问题。
+
+如果在多个类路径位置都可搜索到跟包，带有Ant风格的`classpath:`资源不一定能找到匹配的资源。考虑以下资源位置的示例：
+
+```xml
+com/mycompany/package1/service-context.xml
+```
+
+现在考虑找到该文件的Ant风格路径：
+
+```xml
+classpath:com/mycompany/**/service-context.xml
+```
+
+这样的资源可能只在一个位置，但是当试图解析前面示例的路径时，解析器通过getResource("com/mycompany")返回（第一个）URL。如果此基本软件包节点存在于多个classloader位置中，则实际的末尾资源可能不存在。因此，在这种情况下，您更应该使用`classpath*:`，该模式搜索包含根包的所有类路径位置。
+
+### 2.7.3. `FileSystemResource` 注意事项
+
+未附加到FileSystemApplicationContext（即，当FileSystemApplicationContext不是实际的ResourceLoader）的FileSystemResource如您所期望的对待您的绝对和相对路径。相对路径相对于当前的工作目录，而绝对路径相对于文件系统的根目录。
+
+但是，出于向后兼容性（历史）原因，当FileSystemApplicationContext是ResourceLoader时，这种情况会发生变化。FileSystemApplicationContext强制所有附加的FileSystemResource实例将所有位置路径视为相对路径，无论它们是否以斜杠开始。实际上，这意味着以下示例是等效的：
+
+```java
+ApplicationContext ctx =
+    new FileSystemXmlApplicationContext("conf/context.xml");
+```
+
+```java
+ApplicationContext ctx =
+    new FileSystemXmlApplicationContext("/conf/context.xml");
+```
+
+实际上，如果您需要真正的绝对文件系统路径，则应避免在FileSystemResource或FileSystemXmlApplicationContext中使用绝对路径，并通过使用`file:`URL前缀强制使用UrlResource。以下示例显示了如何这样做：
+
+```java
+// actual context type doesn't matter, the Resource will always be UrlResource
+ctx.getResource("file:///some/resource/path/myTemplate.txt");
+```
+
+```java
+// force this FileSystemXmlApplicationContext to load its definition via a UrlResource
+ApplicationContext ctx =
+    new FileSystemXmlApplicationContext("file:///conf/context.xml");
+```
+
+# 3. 校验，数据绑定和类型转换
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
