--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -5932,7 +5932,106 @@ ApplicationContext ctx =
 
 # 3. 校验，数据绑定和类型转换
 
+将验证视为业务逻辑需要权衡，Spring提供了用于验证（和数据绑定）的设计，这些设计并不排除其中任何一个。特别的，验证不应与Web层息息相关，并且应该易于本地化，并且应该可以集成到任何可用的验证器。考虑到这些问题，Spring提供了一份`Validator`约定，在应用程序的每一层中既基础又非常可用。
 
+数据绑定对于让用户输入动态绑定到应用程序的域模型（或用于处理用户输入的任何对象）很有用。Spring提供了`DataBinder`来做到这一点。`Validator`和`DataBinder`组成了`validation`包，该包主要用于但不限于Web层。
+
+`BeanWrapper`是春季框架中的一个基本概念，在许多地方都使用。但是，您可能无需直接使用BeanWrapper。但是，因为这是参考文档，所以我们会做一些解释。我们在本章中解释了BeanWrapper，如果您要使用它，则在尝试将数据绑定到对象时使用。
+
+Spring的DataBinder和低级BeanWrapper都使用PropertyEditorSupport实现来解析和格式化属性值。PropertyEditor和PropertyEditorSupport类型是JavaBeans 规范的一部分，也在本章中进行了解释。Spring 3引入了core.convert软件包，该软件包提供了一个通用类型的转换设施，以及用于格式化UI字段值的高级“format”包。您可以将这些软件包用作PropertyEditorSupport实现的简单替代方案。本章也讨论了它们。
+
+Spring通过设置基础架构和Spring自己的Validator约定的适配器以支持Java Bean验证。如 [Java Bean Validation](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#validation-beanvalidation)中所述，应用程序可以在全局范围内启用Bean验证，并专门用于所有验证需求。在Web层中，应用程序可以进一步注册每个DataBinder的controller-local Spring Validator实例，如[Configuring a `DataBinder`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#validation-binder)所述，这对于插入自定义验证逻辑很有用。
+
+## 3.1. 使用Spring的Validator 
+
+Spring特有Validator接口，您可以用来验证对象。验证器接口通过使用`Errors`对象来工作，以便在验证时，验证器可以将验证失败报告给错误对象。
+
+考虑一个小数据对象的以下示例：
+
+```java
+public class Person {
+
+    private String name;
+    private int age;
+
+    // the usual getters and setters...
+}
+```
+
+下一个示例通过实现`org.springframework.validation.Validator`接口的以下两种方法来为`Person`类提供验证行为：
+
+- `supports(Class)`：该验证器可以验证提供的类的实例吗？
+- `validate(Object, org.springframework.validation.Errors)`：验证给定的对象，如果发生验证错误，将错误信息传递给Errors对象。
+
+实现Validator非常简单，尤其是当您知道Spring框架还提供ValidationUtils辅助类。以下示例为Person实例Validator实现：
+
+```java
+public class PersonValidator implements Validator {
+
+    /**
+     * This Validator validates only Person instances
+     */
+    public boolean supports(Class clazz) {
+        return Person.class.equals(clazz);
+    }
+
+    public void validate(Object obj, Errors e) {
+        ValidationUtils.rejectIfEmpty(e, "name", "name.empty");
+        Person p = (Person) obj;
+        if (p.getAge() < 0) {
+            e.rejectValue("age", "negativevalue");
+        } else if (p.getAge() > 110) {
+            e.rejectValue("age", "too.darn.old");
+        }
+    }
+}
+```
+
+ValidationUtils类上的静态rejectIfEmpty(..)方法用于拒绝name属性，如果该属性为null或空字符串。请查看[`ValidationUtils`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/validation/ValidationUtils.html) javadoc，以查看除了前面显示的示例外提供了什么功能。
+
+虽然当然可以实现一个单个Validator类来验证丰富对象中的每个嵌套对象，但最好将每个嵌套对象类的验证逻辑封装在其自己的Validator实现中。“丰富”对象的一个简单示例是由两个String属性（一个名称和第二个名称）和一个复杂Address对象组成的Customer。Address对象可以独立于Customer对象使用，因此已经实现了不同的AddressValidator。如果您希望您的CustomerValidator重复使用AddressValidator类中包含的逻辑，而无需求复制粘贴，则可以在CustomerValidator中依赖注入或实例化AddressValidator，如下示例显示：
+
+```java
+public class CustomerValidator implements Validator {
+
+    private final Validator addressValidator;
+
+    public CustomerValidator(Validator addressValidator) {
+        if (addressValidator == null) {
+            throw new IllegalArgumentException("The supplied [Validator] is " +
+                "required and must not be null.");
+        }
+        if (!addressValidator.supports(Address.class)) {
+            throw new IllegalArgumentException("The supplied [Validator] must " +
+                "support the validation of [Address] instances.");
+        }
+        this.addressValidator = addressValidator;
+    }
+
+    /**
+     * This Validator validates Customer instances, and any subclasses of Customer too
+     */
+    public boolean supports(Class clazz) {
+        return Customer.class.isAssignableFrom(clazz);
+    }
+
+    public void validate(Object target, Errors errors) {
+        ValidationUtils.rejectIfEmptyOrWhitespace(errors, "firstName", "field.required");
+        ValidationUtils.rejectIfEmptyOrWhitespace(errors, "surname", "field.required");
+        Customer customer = (Customer) target;
+        try {
+            errors.pushNestedPath("address");
+            ValidationUtils.invokeValidator(this.addressValidator, customer.getAddress(), errors);
+        } finally {
+            errors.popNestedPath();
+        }
+    }
+}
+```
+
+验证错误将报告给Errors对象并传递给验证器。对于Spring Web MVC，您可以使用`<spring:bind/>`标签来检查错误消息，但也可以自己检查Errors对象。有关其提供的方法的更多信息，可以在[javadoc](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframeworkvalidation/Errors.html)中找到。
+
+## 3.2. 将代码解析为错误消息
 
 
 
