feat:spring core翻译至3.5.1

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -6033,27 +6033,510 @@ public class CustomerValidator implements Validator {
 
 ## 3.2. 将代码解析为错误消息
 
+我们介绍了数据绑定和验证。本节涵盖了与验证错误相对应的输出消息。在上一节中显示的示例中，我们拒绝了name和age字段。如果我们想使用MessageSource输出错误消息，则可以使用拒绝字段时提供的错误代码来进行。当您（直接或间接地通过使用ValidationUtils类）调用rejectValue或来自Errors接口的其他reject方法之一，基础实现不仅注册您传递的代码，还会注册其他错误代码。MessageCodesResolver确定Errors接口注册哪些错误代码。默认情况下，使用的是DefaultMessageCodesResolver，它不仅在您提供的代码中注册消息，还注册了包含您传递给拒绝方法的字段名称的消息。因此，如果您通过使用rejectValue("age", "too.darn.old")拒绝字段，除了too.darn.old，Spring也会注册too.darn.old.age和too.darn.old.age.int（第一个包含字段名，第二个包含字段类型）。这是为了以便帮助开发人员定位错误消息。
+
+有关MessageCodesResolver和默认策略的更多信息，可以分别在[`MessageCodesResolver`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/validation/MessageCodesResolver.html)和[`DefaultMessageCodesResolver`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/validation/DefaultMessageCodesResolver.html)的Javadoc中找到。
+
+## 3.3. Bean操作和``BeanWrapper``
 
 
 
+org.springframework.beans软件包遵守JavaBeans 标准。JavaBeans 是一个具有默认无参构造器的类，并遵循命名约定，例如，一个名为bingoMadness的属性将具有setter方法setBingoMadness(..)和getter方法getBingoMadness()。有关JavaBeans的更多信息，请参见[javabeans](https://docs.oracle.com/javase/8/docs/api/java/beans/package-summary.html)。
+
+beans 软件包中的一个非常重要的类是BeanWrapper接口及其相应的实现（BeanWrapperImpl）。正如javadoc引用的那样，BeanWrapper提供了设置和获取属性值（单独或批量），获取属性描述符和查询属性的功能，以确定它们是可读还是可写的。此外，BeanWrapper提供了对嵌套属性的支持，使子属性设置为无限的深度。BeanWrapper还支持添加标准Javabeans PropertyChangeListeners和VetoableChangeListeners的能力，而无需在目标类中编写支持代码。另外，BeanWrapper为设置索引属性提供了支持。BeanWrapper通常不直接通过应用程序代码使用，而是由DataBinder和BeanFactory使用。
+
+BeanWrapper的工作方式部分由其名称表明：它包装bean以在该bean上执行操作，例如设置和检索属性。
+
+### 3.3.1. 设置获取基础和嵌套属性
+
+设置和获取属性是通过BeanWrapper的setPropertyValue和getPropertyValue重载方法完成的。有关详细信息，请参见他们的Javadoc。下表显示了这些约定的一些例子：
+
+| 表达式               | 说明                                                         |
+| -------------------- | ------------------------------------------------------------ |
+| name                 | 对应于getName()或isName()和setName(..)方法的属性名称。       |
+| account.name         | 对应于getAccount().setName()或getAccount().getName()方法的属性名称。 |
+| account[2]           | account属性的第三个元素。索引属性可以是array，list或其他自然排序的集合。 |
+| account[COMPANYNAME] | account Map属性的以COMPANYNAME为key的entry                   |
+
+（如果您不打算直接使用BeanWrapper，那么下一节对您来说并不重要。如果您仅使用DataBinder和BeanFactory及其默认实现，则应跳至[内置PropertyEditor实现](#3.3.2. 内置PropertyEditor实现)。）
+
+以下两个示例类使用BeanWrapper获取并设置属性：
+
+```java
+public class Company {
+
+    private String name;
+    private Employee managingDirector;
+
+    public String getName() {
+        return this.name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public Employee getManagingDirector() {
+        return this.managingDirector;
+    }
+
+    public void setManagingDirector(Employee managingDirector) {
+        this.managingDirector = managingDirector;
+    }
+}
+```
+
+```java
+public class Employee {
+
+    private String name;
+
+    private float salary;
+
+    public String getName() {
+        return this.name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public float getSalary() {
+        return salary;
+    }
+
+    public void setSalary(float salary) {
+        this.salary = salary;
+    }
+}
+```
+
+以下代码片段显示了如何检索和操纵Companies和Employees实例的某些属性：
+
+```java
+BeanWrapper company = new BeanWrapperImpl(new Company());
+// setting the company name..
+company.setPropertyValue("name", "Some Company Inc.");
+// ... can also be done like this:
+PropertyValue value = new PropertyValue("name", "Some Company Inc.");
+company.setPropertyValue(value);
+
+// ok, let's create the director and tie it to the company:
+BeanWrapper jim = new BeanWrapperImpl(new Employee());
+jim.setPropertyValue("name", "Jim Stravinsky");
+company.setPropertyValue("managingDirector", jim.getWrappedInstance());
+
+// retrieving the salary of the managingDirector through the company
+Float salary = (Float) company.getPropertyValue("managingDirector.salary");
+```
 
 
 
+### 3.3.2. 内置PropertyEditor实现
 
+spring使用PropertyEditor来处理Object和String之间的转换。以与对象本身不同的方式表示属性可能很方便。例如，可以以人类可读的方式表示日期（如String`: `'2007-14-09'），而我们仍然可以将人类可读的形式转换回原始日期（甚至将人类可读的日期形式转为Date对象）。可以通过注册java.beans.PropertyEditor的自定义编辑器来实现此行为。在BeanWrapper上注册自定义编辑器，或者在特定的IOC容器中（如上一章中提到）注册自定义编辑器，使其了解如何将属性转换为所需类型。有关PropertyEditor的更多信息，请参阅 [the javadoc of the `java.beans` package from Oracle](https://docs.oracle.com/javase/8/docs/api/java/beans/package-summary.html)。
 
+在Spring使用属性编辑的几个示例：
 
+- 通过使用PropertyEditor实现设置bean上的属性。当您将字符串用作在XML文件中声明的某些bean的属性值时，Spring（如果相应属性的设置具有Class参数）使用ClassEditor来尝试将参数解析为Class对象。
+- Spring的MVC框架通过使用所有在CommandController的所有子类中手动绑定的PropertyEditor实现，解析HTTP请求参数。
 
+Spring具有许多内置的PropertyEditor实现，他们全部在org.springframework.beans.propertyeditors包中。默认情况下，大多数（但不是全部，如下表所示）由BeanWrapperImpl注册。属性编辑器可以以某种方式配置，您仍然可以注册自己的变体以覆盖默认版本。下表描述了Spring提供的各种PropertyEditor的实现：
 
+| 类                      | 说明                                                         |
+| ----------------------- | ------------------------------------------------------------ |
+| ByteArrayPropertyEditor | byte数组编辑器。将字符串转换为其相应的字节表示。默认情况下由BeanWrapperImpl注册。 |
+| ClassEditor             | 解析字符串实际代表的类，反之亦然。当找不到class 时，就会抛出IllegalArgumentException。默认情况下，由BeanWrapperImpl注册。 |
+| CustomBooleanEditor     | Boolean属性的可自定义属性编辑器。默认情况下，由BeanWrapperImpl注册，但可以通过将其自定义实例注册为自定义编辑器来覆盖。 |
+| CustomCollectionEditor  | collections的属性编辑器，将任何Collection转换为给定的目标Collection类型。 |
+| CustomDateEditor        | java.util.Date的可自定义属性编辑器，支持自定义DateFormat。默认情况下未注册。必须由用户根据需要使用适当的格式注册。 |
+| CustomNumberEditor      | 任何Number子类的可自定义属性编辑器，例如Integer，Long，Float或Double。默认情况下，由BeanWrapperImpl注册，但可以通过将其自定义实例注册为自定义编辑器来覆盖。 |
+| FileEditor              | 将字符串解析为java.io.File对象。默认情况下，由BeanWrapperImpl注册。 |
+| InputStreamEditor       | 单向属性编辑器，可以使用字符串并通过中间ResourceEditor和Resource生产一个输入流，以便可以将InputStream属性直接设置为字符串。请注意，默认用法不会为您关闭InputStream。默认情况下，由BeanWrapperImpl注册。 |
+| LocaleEditor            | 可以将字符串解析为Locale对象，反之亦然（字符串格式为*[country]*[variant]，与Locale的toString()方法相同）。默认情况下，由BeanWrapperImpl注册。 |
+| PatternEditor           | 可以将字符串解析为java.util.regex.Pattern对象，反之亦然。    |
+| PropertiesEditor        | 可以将字符串（用java.util.Properties类中的javadoc中定义的格式格式化）解析为为Properties对象。默认情况下，由BeanWrapperImpl注册。 |
+| StringTrimmerEditor     | trim字符串的属性编辑器。（可选）允许将空字符串转换为null值。默认情况下未注册 - 必须由用户注册。 |
+| URLEditor               | 可以将URL的字符串表示形式解析为实际的URL对象。默认情况下，由BeanWrapperImpl注册。 |
 
+Spring使用java.beans.PropertyEditorManager设置可能需要的属性编辑器的搜索路径。搜索路径还包括sun.bean.editors，其中包括针对Font，Color和大多数原始类型的PropertyEditor实现。还要注意，标准Javabeans基础架构会使用Editor自动发现PropertyEditor类（无需明确注册），如果它们与他们处理的类在同一个包，并且与该类别具有相同的名称。例如具有以下类和软件包结构，这足以使SomethingEditor被识别并用作Something类型的PropertyEditor。
 
+```java
+com
+  chank
+    pop
+      Something
+      SomethingEditor // the PropertyEditor for the Something class
+```
 
+请注意，您也可以在此处使用标准的BeanInfo Javabeans机制（[参考](https://docs.oracle.com/javase/tutorial/javabeans/advanced/customization.html)）。以下示例使用BeanInfo机制注册一个或多个相关类的属性的PropertyEditor实例：
 
+```java
+com
+  chank
+    pop
+      Something
+      SomethingBeanInfo // the BeanInfo for the Something class
+```
 
+以下java源码引用SomethingBeanInfo类，该类关联Something类age属性的CustomNumberEditor。
 
+```java
+public class SomethingBeanInfo extends SimpleBeanInfo {
 
+    public PropertyDescriptor[] getPropertyDescriptors() {
+        try {
+            final PropertyEditor numberPE = new CustomNumberEditor(Integer.class, true);
+            PropertyDescriptor ageDescriptor = new PropertyDescriptor("age", Something.class) {
+                public PropertyEditor createPropertyEditor(Object bean) {
+                    return numberPE;
+                };
+            };
+            return new PropertyDescriptor[] { ageDescriptor };
+        }
+        catch (IntrospectionException ex) {
+            throw new Error(ex.toString());
+        }
+    }
+}
+```
 
+**注册额外的自定义`PropertyEditor` 实现**
 
+将bean属性设置为字符串值时，Spring IOC容器最终使用标准Javabeans PropertyEditor实现将这些字符串转换为属性的复杂类型。Spring预注册了许多自定义PropertyEditor实现（例如，将以字符串表示的类名称转换为Class对象）。此外，Java的标准JavaBeans PropertyEditor查找机制使一个类的PropertyEditor可以适当地命名，并将其放置在与提供支持的类的同一包中，以便可以自动找到它。
 
+如果需要注册其他自定义PropertyEditors，则可以使用几种机制。假设您有BeanFactory引用，最常见的手动方法但不推荐是使用ConfigurableBeanFactory接口的registerCustomEditor()方法。另一个（更方便点）机制是使用一种特殊的bean工厂post处理器，称为CustomEditorConfigurer。尽管您可以将bean factory的post处理器与BeanFactory实现一起使用，但CustomEditorConfigurer具有嵌套的属性设置，因此我们强烈建议您将其与ApplicationContext一起使用，您可以在其中以类似的方式部署到任何bean或能自动检测并应用的地方。
+
+请注意，所有bean工厂和应用程序上下文自动使用许多内置属性编辑器，通过使用BeanWrapper来处理属性转换。[上一节](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-beans-conversion).中列出了BeanWrapper注册的标准属性编辑器。此外，ApplicationContexts还覆盖或添加其他编辑器以适合特定应用程序上下文类型的方式处理资源查找。
+
+标准Javabeans PropertyEditor实例用于将表示为字符串的属性值转换为属性的实际复杂类型。您可以使用CustomEditorConfigurer后处理器来方便地为ApplicationContext添加其他PropertyEditor实例。
+
+考虑以下示例，该示例定义了一个名为ExoticType的用户类，另一个称为DependsOnExoticType的类，它需要设置ExoticType属性：
+
+```java
+package example;
+
+public class ExoticType {
+
+    private String name;
+
+    public ExoticType(String name) {
+        this.name = name;
+    }
+}
+
+public class DependsOnExoticType {
+
+    private ExoticType type;
+
+    public void setType(ExoticType type) {
+        this.type = type;
+    }
+}
+```
+
+当正确设置事物时，我们希望能够将类型属性分配为字符串，PropertyEditor将其转换为实际的ExoticType实例。以下bean定义显示了如何设置此关系：
+
+```java
+<bean id="sample" class="example.DependsOnExoticType">
+    <property name="type" value="aNameForExoticType"/>
+</bean>
+```
+
+PropertyEditor看起来类似于以下内容：
+
+```java
+// converts string representation to ExoticType object
+package example;
+
+public class ExoticTypeEditor extends PropertyEditorSupport {
+
+    public void setAsText(String text) {
+        setValue(new ExoticType(text.toUpperCase()));
+    }
+}
+```
+
+最后，以下示例显示了如何使用CustomEditorConfigurer向ApplicationContext注册新PropertyEditor，然后可以根据需要使用它：
+
+```xml
+<bean class="org.springframework.beans.factory.config.CustomEditorConfigurer">
+    <property name="customEditors">
+        <map>
+            <entry key="example.ExoticType" value="example.ExoticTypeEditor"/>
+        </map>
+    </property>
+</bean>
+```
+
+**使用PropertyEditorRegistrar**
+
+在Spring容器中注册属性编辑器的另一种机制是创建和使用PropertyEditorRegistrar。当您需要在几种不同情况下使用相同的属性编辑器集时，此接口特别有用。您可以编写相应的注册器并在每种情况下重复使用。PropertyEditorRegistrar实例与称为PropertyEditorRegistry的接口协同工作，该接口是由Spring BeanWrapper（和DataBinder）实现的接口。与CustomEditorConfigurer一起使用时，PropertyEditorRegistrar的实例特别方便，该属性公开了一个称为setPropertyEditorRegistrars(..)的属性。以这种方式添加到CustomEditorConfigurer中的PropertyEditorRegistrar实例可以与DataBinder和Spring MVC控制器共享。此外，它避免了在自定义编辑器上同步的需求：PropertyEditorRegistrar期望为每个bean尝试创建新PropertyEditor实例。
+
+以下示例显示了如何创建自己的PropertyEditorRegistrar实现：
+
+```java
+package com.foo.editors.spring;
+
+public final class CustomPropertyEditorRegistrar implements PropertyEditorRegistrar {
+
+    public void registerCustomEditors(PropertyEditorRegistry registry) {
+
+        // it is expected that new PropertyEditor instances are created
+        registry.registerCustomEditor(ExoticType.class, new ExoticTypeEditor());
+
+        // you could register as many custom property editors as are required here...
+    }
+}
+```
+
+另请参见org.springframework.beans.support.ResourceEditorRegistrar，以获取PropertyEditorRegistrar实现示例。请注意，在其registerCustomEditors(..)方法实现中，为每个属性编辑器创建新实例。
+
+下一个示例显示了如何配置CustomEditorConfigurer并将我们的CustomPropertyEditorRegistrar的实例注入其中：
+
+```java
+<bean class="org.springframework.beans.factory.config.CustomEditorConfigurer">
+    <property name="propertyEditorRegistrars">
+        <list>
+            <ref bean="customPropertyEditorRegistrar"/>
+        </list>
+    </property>
+</bean>
+
+<bean id="customPropertyEditorRegistrar"
+    class="com.foo.editors.spring.CustomPropertyEditorRegistrar"/>
+```
+
+最后（在本章中，使用Spring的MVC Web框架与本章的重点有所不同），使用PropertyEditorRegistrars与数据绑定Controllers（例如SimpleFormController）结合使用，可能非常方便。以下示例使用PropertyEditorRegistrar的initBinder(..)的实现：
+
+```java
+public final class RegisterUserController extends SimpleFormController {
+
+    private final PropertyEditorRegistrar customPropertyEditorRegistrar;
+
+    public RegisterUserController(PropertyEditorRegistrar propertyEditorRegistrar) {
+        this.customPropertyEditorRegistrar = propertyEditorRegistrar;
+    }
+
+    protected void initBinder(HttpServletRequest request,
+            ServletRequestDataBinder binder) throws Exception {
+        this.customPropertyEditorRegistrar.registerCustomEditors(binder);
+    }
+
+    // other methods to do with registering a User
+}
+```
+
+这种PropertyEditor注册方式非常简洁（initBinder(..)的实现仅是一行长），并让一般的PropertyEditor注册代码封装在类中，然后根据需要在尽可能多的Controllers共享。
+
+## 3.4. Spring类型转换
+
+Spring 3引入了core.convert软件包，该软件包提供了一个通用类型的转换系统。该系统定义一个SPI来实现类型转换逻辑和在运行时执行类型转换的API。在Spring容器中，您可以将此系统用作PropertyEditor实现的替代方案，将外部化bean属性值字符串转换为所需的属性类型。您还可以在需要类型转换的任何地方使用此公共API。
+
+### 3.4.1. SPI转换器
+
+SPI实现类型转换逻辑是简单且强类型的，如以下接口定义所示：
+
+```java
+package org.springframework.core.convert.converter;
+
+public interface Converter<S, T> {
+
+    T convert(S source);
+}
+```
+
+要创建自己的转换器，请实现Converter接口，然后参数化S作为您转换的源类型和T作为您转换的目标类型。如果需要转换为T的数组或T集合，则也可以透明地应用这样的转换器，前提是还已经注册了委托数组或收集转换器（默认情况下为DefaultConversionService）。
+
+对于每个convert(S)的调用，需保证源参数不会为null。如果转换失败，您的Converter可能会抛出任何不受检异常。特别的，它应该抛出IllegalArgumentException以报告无效的源值。注意确保您的转换器实现是线程安全的。
+
+为方便起见，在core.convert.support软件包中提供了几个转换器实现。包括从字符串到数字和其他常见类型的转换器。以下列表显示了StringToInteger类，这是一个典型的转换器实现：
+
+```java
+package org.springframework.core.convert.support;
+
+final class StringToInteger implements Converter<String, Integer> {
+
+    public Integer convert(String source) {
+        return Integer.valueOf(source);
+    }
+}
+```
+
+### 3.4.2. 使用`ConverterFactory`
+
+当您需要集中整个类层次结构的转换逻辑（例如，从String到Enum对象转换时）时，您可以实现ConverterFactory，如下示例显示：
+
+```java
+package org.springframework.core.convert.converter;
+
+public interface ConverterFactory<S, R> {
+
+    <T extends R> Converter<S, T> getConverter(Class<T> targetType);
+}
+```
+
+参数化类型S是要转换的类型，R定义了您可以转换为的类型。然后实现`getConverter(Class<T>)`，其中T是R的子类。参考StringToEnumConverterFactory示例：
+
+```java
+package org.springframework.core.convert.support;
+
+final class StringToEnumConverterFactory implements ConverterFactory<String, Enum> {
+
+    public <T extends Enum> Converter<String, T> getConverter(Class<T> targetType) {
+        return new StringToEnumConverter(targetType);
+    }
+
+    private final class StringToEnumConverter<T extends Enum> implements Converter<String, T> {
+
+        private Class<T> enumType;
+
+        public StringToEnumConverter(Class<T> enumType) {
+            this.enumType = enumType;
+        }
+
+        public T convert(String source) {
+            return (T) Enum.valueOf(this.enumType, source.trim());
+        }
+    }
+}
+```
+
+### 3.4.3. 使用`GenericConverter`
+
+当您需要复杂的Converter实现时，请考虑使用GenericConverter接口。与Converter相比，GenericConverter具有更灵活的签名，其支持在多种源和目标类型之间转换。此外，GenericConverter在实现转换逻辑时可以使用源和目标字段上下文。这样的上下文使类型转换由字段注释或在字段签名上声明的泛型信息驱动。以下列表显示了GenericConverter的接口定义：
+
+```java
+package org.springframework.core.convert.converter;
+
+public interface GenericConverter {
+
+    public Set<ConvertiblePair> getConvertibleTypes();
+
+    Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType);
+}
+```
+
+要实现GenericConverter，请让getConvertibleTypes()返回支持的源→目标类型对。然后实现convert(Object, TypeDescriptor, TypeDescriptor)以包含您的转换逻辑。源TypeDescriptor提供对源字段的访问权限，该源字段保留了要转换的值。目标TypeDescriptor提供对要设置转换值的目标字段的访问。
+
+GenericConverter的示例之一是可以在Java数组和集合之间进行转换的转换器。这样的ArrayToCollectionConverter自省木集合类型字段以解析集合元素类型。这使源数组中的每个元素都可以在集合在目标字段上设置之前将其转换为集合元素类型。
+
+> :information_source:由于GenericConverter是一个更复杂的SPI接口，因此您仅在需要时才能使用它。对于基本类型转换需求，使用Converter或ConverterFactory即可
+
+**使用`ConditionalGenericConverter`**
+
+有时，您只有在特定条件下才能运行Converter。例如，您可能只有在目标字段上存在特定的注释时才能运行Converter，或者只有在目标类中定义了特定方法（例如static valueOf方法）时，您才运行Converter。ConditionalGenericConverter是GenericConverter和ConditionalConverter接口的联合，可让您定义此类自定义匹配条件：
+
+```java
+public interface ConditionalConverter {
+
+    boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType);
+}
+
+public interface ConditionalGenericConverter extends GenericConverter, ConditionalConverter {
+}
+```
+
+ConditionalGenericConverter的一个很好的示例是EntityConverter，可在实体标识符和实体引用之间转换。此类EntityConverter只有在目标实体类型声明静态查找器方法（例如，findAccount(Long)）时才匹配。您可以在matches(TypeDescriptor, TypeDescriptor)的实现中执行此类查找器方法检查。
+
+### 3.4.4. `ConversionService`  API
+
+ConversionService定义了用于在运行时执行类型转换逻辑的统一API。转换器通常在以下门面接口后运行：
+
+```java
+package org.springframework.core.convert;
+
+public interface ConversionService {
+
+    boolean canConvert(Class<?> sourceType, Class<?> targetType);
+
+    <T> T convert(Object source, Class<T> targetType);
+
+    boolean canConvert(TypeDescriptor sourceType, TypeDescriptor targetType);
+
+    Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType);
+
+}
+```
+
+大多数ConversionService实现还实现ConverterRegistry，其为注册转换器提供了SPI。在内部，ConversionService实现委托给了其注册的转换器，以执行类型的转换逻辑。
+
+core.convert.support软件包提供了强大的ConversionService实现。GenericConversionService是适合在大多数环境中使用的通用实现。ConversionServiceFactory提供了一个方便的工厂，用于创建常见的ConversionService配置。
+
+### 3.4.5. 配置`ConversionService`
+
+ConversionService是一个无状态对象，旨在在应用程序启动时实例化，然后在多个线程之间共享。在Spring应用程序中，您通常为每个Spring容器（或ApplicationContext）配置ConversionService实例。Spring可以接收ConversionService，并在需要通过框架执行类型转换时使用它。您还可以将此ConversionService注入任何bean类并直接调用。
+
+> :information_source:如果未在Spring注册ConversionService，则使用原始的基于PropertyEditor的系统。
+
+要在Spring注册默认的ConversionService，请添加以下bean定义，其中包括conversionService的id：
+
+```xml
+<bean id="conversionService"
+    class="org.springframework.context.support.ConversionServiceFactoryBean"/>
+```
+
+默认ConversionService可以在strings，numbers，enums，collections，maps和其他常见类型之间转换。要使用您自己的自定义转换器补充或覆盖默认转换器，请设置converters属性。属性值可以实现任何Converter，ConverterFactory或GenericConverter接口。
+
+```xml
+<bean id="conversionService"
+        class="org.springframework.context.support.ConversionServiceFactoryBean">
+    <property name="converters">
+        <set>
+            <bean class="example.MyCustomConverter"/>
+        </set>
+    </property>
+</bean>
+```
+
+在Spring MVC应用程序中使用ConversionService也很常见。请参阅spring MVC章中的[Conversion and Formatting](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/web.html#mvc-config-conversion)。
+
+在某些情况下，您可能希望在转换过程中格式化。参见FormattingConversionServiceFactoryBean 使用[The `FormatterRegistry` SPI](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#format-FormatterRegistry-SPI) 详情。
+
+### 3.4.6. 编程式使用`ConversionService` 
+
+要以编程方式使用ConversionService实例，您可以像其他任何bean一样注入对它的引用。以下示例显示了如何做到的：
+
+```java
+@Service
+public class MyService {
+
+    public MyService(ConversionService conversionService) {
+        this.conversionService = conversionService;
+    }
+
+    public void doIt() {
+        this.conversionService.convert(...)
+    }
+}
+```
+
+对于大多数用例，您可以使用指定目标类型的convert方法，但它无法应用于更复杂的类型（例如collection参数）。例如，如果要以编程方式将Integer的List转换为String的List，则需要对源和目标类型进行正式定义。
+
+幸运的是，TypeDescriptor提供了各种选择，使其简单地做到这一点，如以下示例所示：
+
+```java
+DefaultConversionService cs = new DefaultConversionService();
+
+List<Integer> input = ...
+cs.convert(input,
+    TypeDescriptor.forObject(input), // List<Integer> type descriptor
+    TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(String.class)));
+```
+
+请注意，DefaultConversionService会自动注册适合大多数环境的转换器。这包括collection 转换器，scalar 转换器和基本Object`-to-`String转换器。您可以通过使用DefaultConversionService类上的static addDefaultConverters方法向任何ConverterRegistry注册相同的转换器。
+
+数组和集合值类型的转换器能重复使用，因此假设标准集合处理是合适的，则无需创建特定的转换器即可从S集合转换为T集合。
+
+## 3.5. Spring字段格式化
+
+如上一节所述，[`core.convert`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#core-convert)是一种通用类型的转换系统。它提供了一个统一的ConversionService API以及一个强大的Converter SPI，用于实现一种从一种类型到另一种类型的转换逻辑。Spring容器使用此系统绑定bean性值。此外，Spring表达语言（SPEL）和DataBinder都使用此系统来绑定字段值。例如，当SpEL 需要吧Short强转为Long以完成expression.setValue(Object bean, Object value)尝试时，core.convert系统会强制执行。
+
+现在考虑类型装换需要典型的客户端环境，例如Web或桌面应用程序。在这样的环境中，您通常会从String转换以支持客户端回发过程，并返回字符串以支持视图渲染过程。此外，您通常需要本地化字符串值。更通用的core.convert Converter SPI不会直接解决此类格式要求。为了直接解决它们，Spring 3引入了便捷的Formatter SPI，该SPI为客户环境提供了简单且可靠的替代方案。
+
+总之，当您需要实现通用类型转换逻辑时，您可以使用Converter SPI，例如，用于在java.util.Date和Long之间转换。当您在客户端环境（例如Web应用程序）中工作时，您可以使用Formatter SPI，并且需要解析和打印本地化字段值。ConversionService为SPI提供了统一的类型转换API。
+
+### 3.5.1. `Formatter`  SPI
 
 
 
